Close to being done
Need to verify colors, and content. Once that is ok we will clean up
the code & possibly add some javascript behaviour

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="style.css">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -22,14 +22,14 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-            <div class="header-group">
-                <h1 class="title">Margot Dolewska Dyer</h1>
-            </div>
-                <div class="about">
-                    <p>Blogger | Photo retoucher | crafter | Photographer</p>
-                    <h2 class="site-description">Brighton, UK</h2>
-                </div>
+
+                <h1 class="title"><span>Margot</span> Dolewska Dyer</h1>
+
             </header>
+            <div class="about">
+                <p>Blogger | Photo retoucher | crafter | Photographer</p>
+                <h2 class="site-description">Brighton, UK</h2>
+            </div>
         </div>
 
         <div class="main-container">
@@ -73,12 +73,12 @@
 
                     <img class="secpic" src="images/img3.jpg" alt="on the beach">
                         <div class="section-meta">
-                            <h2>416 Studios</h2>
-                            <h3>Retouch + Design</h3>
+                            <h2>Gifts by Marissa</h2>
+                            <h3>Photography</h3>
                         </div>
                             <div class="descr">
-                                <p> A retouching & Web design studio in Brighton</p>
-                                <a href="http://416studios.co.uk" class="btn">Visit 416 Studios</a>
+                                <p>Buy my photographs & prints on Gifts by Marissa</p>
+                                <a href="http://416studios.co.uk" class="btn">Shop Now</a>
                             </div>
                     </section>
                     <section>
