--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Margot/Gocha</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -27,7 +27,8 @@
 
             </header>
             <div class="about">
-                <p>Blogger | Photo retoucher | crafter | Photographer</p>
+                <h2 class="site-description">Margot DOLEWSKA DYER</h2>
+                <p>mother | wife | crafter | blogger | photo retoucher | photographer</p>
                 <h2 class="site-description">Brighton, UK</h2>
             </div>
         </div>
@@ -37,32 +38,32 @@
 
                 <article>
                     <section>
-                        <img class="secpic" src="images/416studios.jpg" alt="on the beach">
+                        <img class="secpic" src="images/416studios.jpg" alt="416 Studios">
                         <div class="section-meta">
                             <h2>416 Studios</h2>
                             <h3>Retouch + Design</h3>
                         </div>
                         <div class="descr">
-                            <p> A retouching & Web design studio in Brighton</p>
-                            <a href="http://416studios.co.uk" class="btn">Visit 416 Studios</a>
+                            <p> retouching & web design studio in Brighton</p>
+                            <a target="_blank" href="http://www.416studios.com" class="btn">visit 416 Studios</a>
                         </div>
                     </section>
                     <section>
-                        <img class="secpic" src="images/coffeeandvanilla.jpg" alt="Reading the morning paper">
+                        <img class="secpic" src="images/coffeeandvanilla.jpg" alt="Coffee & Vanilla">
                         <div class="section-meta">
                             <h2>Coffee & Vanilla</h2>
-                            <h3>Crafts, food & adventures</h3>
+                            <h3>Crafts, Food & Adventures</h3>
                         </div>
                         <div class="descr">
-                            <p> A retouching & Web design studio in Brighton</p>
-                            <a href="http://coffeeandvanilla.co.uk" class="btn">Visit Coffee & vanilla</a>
+                            <p>our blog with recipes, DIYs, photos and more...</p>
+                            <a target="_blank"  href="http://coffeeandvanilla.com" class="btn">visit Coffee & Vanilla</a>
                         </div>
                     </section>
                     <section>
-                        <img class="secpic" src="images/marissella.jpg" alt="Reading the morning paper">
+                        <img class="secpic" src="images/marissella.jpg" alt="Around the Web">
                         <div class="section-meta">
-                            <h2>Find me</h2>
-                            <h3>Around the web</h3>
+                            <h2>find me</h2>
+                            <h3>Around the Web</h3>
                         </div>
                         <div class="descr">
                             <ul class="social-list">
@@ -76,7 +77,7 @@
                             <a target="_blank" href="https://twitter.com/coffeenvanilla" class="btn">Twitter</a>
                         </li>
                         <li class="social">
-                            <a target="_blank" href="https://www.linkedin.com/in/margotdolewskadyer" class="btn">Linkedin</a>
+                            <a target="_blank" href="https://www.linkedin.com/in/margotdolewskadyer" class="btn">LinkedIn</a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://plus.google.com/u/0/+MargotDolewskaDyer/posts" class="btn">Google<sup>+</sup></a>
@@ -90,37 +91,37 @@
                     </section>
                     
                     <section>
-                        <img class="secpic" src="images/etsy.jpg" alt="Some kind of food">
+                        <img class="secpic" src="images/etsy.jpg" alt="Etsy Store">
                         <div class="section-meta">
-                            <h2>On Etsy</h2>
-                            <h3>Crafts for sale</h3>
+                            <h2>Etsy</h2>
+                            <h3>handcrafted with love...</h3>
                         </div>
                         <div class="descr">
-                            <p> A retouching & Web design studio in Brighton</p>
-                            <a href="http://etsy.com/uk/shop/CoffeeAndVanilla" class="btn">Shop</a>
+                            <p>our crafts for sale</p>
+                            <a target="_blank" href="http://etsy.com/uk/shop/CoffeeAndVanilla" class="btn">visit Etsy</a>
                         </div>
                     </section>
                     
                     <section>
-                    <img class="secpic" src="images/zazzle.jpg" alt="on the beach">
+                    <img class="secpic" src="images/zazzle.jpg" alt="Zazzle Store">
                         <div class="section-meta">
                             <h2>Zazzle</h2>
-                            <h3>Photography</h3>
+                            <h3>photo gifts & more</h3>
                         </div>
                             <div class="descr">
-                                <p>Buy my photographs & prints on Zazzle</p>
-                                <a href="http://zazzle.co.uk/416studios" class="btn">Shop Now</a>
+                                <p>our prints for sale</p>
+                                <a target="_blank" href="http://zazzle.co.uk/416studios" class="btn">visit Zazzle</a>
                             </div>
                     </section>
                     <section>
-                        <img src="images/redbubble.jpg" alt="Some kind of food">
+                        <img src="images/redbubble.jpg" alt="RedBubble Store">
                         <div class="section-meta">
-                            <h2>Red Bubble</h2>
-                            <h3>Prints and stuff</h3>
+                            <h2>RedBubble</h2>
+                            <h3>photo art for sale</h3>
                         </div>
                         <div class="descr">
-                            <p>Prints and stuff</p>
-                            <a href="http://416studios.co.uk" class="btn">Visit Redbubble</a>
+                            <p>our prints and photo gifts</p>
+                            <a target="_blank" href="http://www.redbubble.com/people/416studios" class="btn">visit RedBubble</a>
                         </div>
                     </section>
 
