Change titlebar show/hide to javascript
- Add scroll direction detection
- change scroll snap to proximity

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="header-container">
             <header class="wrapper  clearfix">
 
-                <h1 class="title"><span>Margot</span> Dolewska Dyer</h1>
+                <h1 class="title"><span class="text-highlight">Margot Dolewska Dyer</span></h1>
 
             </header>
             <div class="about">
-                <h2 class="site-description">Margot DOLEWSKA DYER</h2>
-                <p>mother | wife | crafter | blogger | photo retoucher | photographer</p>
-                <h2 class="site-description">Brighton, UK</h2>
+                <h2 class="site-description"><span class="text-highlight">Margot DOLEWSKA DYER</span></h2>
+                <p><span class="text-highlight">mother | wife | crafter | blogger | photo retoucher | photographer</span></p>
+                <h3 class="site-description"><span class="text-highlight">Brighton, UK</span></h3>
             </div>
         </div>
 
